--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
     </header>
     <div class="main">
+       <h1>Hello git</h1>
         <div class="razbudi flrel">Разбуди</div>
         <div class="v-sebe flrel">в себе</div>
         <div class="tvorchestvo flrel">творчество</div>
