--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>
     </header>
     <div class="main">
-       <h1>Hello git</h1>
+       <h2>Hello git</h1>
+       <h3>Hello git2</h1>
         <div class="razbudi flrel">Разбуди</div>
         <div class="v-sebe flrel">в себе</div>
         <div class="tvorchestvo flrel">творчество</div>
